# landrover-gems_t4

./: .gitattributes  .gitignore  CLAUDE.md  GUI_INTERFACES.md  INSTALL.md  INTERFACES.md  README.html  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.0.1.md  RELEASE_NOTES_v0.0.2.md  RELEASE_NOTES_v0.0.4.md  create_shortcut.ps1  launch_gui.bat  pyproject.toml  requirements.txt
.claude/: launch.json
diagrams/: p38-gems-electronics.html
docs/: GUI_INTERFACES.md  RELEASE_NOTES_v0.0.6.md  land-rover-electronics.md
firmware/: HOST_PROTOCOL.md  README.md
gems_t4/: __init__.py  __main__.py
memory/: MEMORY.md  ecu-engine-swap-matching.md  engine-variant-toggle.md  eprom-programmability-question.md  gems-p38-focus.md  implementation-status.md  landrover-v1-project-home.md  phase5-programming.md  pico-board-support.md  qa-unmet-requirements.md  repo-git-state.md  t4-research-sources.md  tech-stack-decision.md  testbook-t4-emulator.md  workflow-directives.md
packaging/: README.md  _entry.py  _entry_gui.py  gems_t4.spec
tests/: conftest.py  test_actuators.py  test_backend_connection.py  test_backend_programming.py  test_client.py  test_dtc.py  test_framing.py  test_gui_actuators.py  test_gui_coding.py  test_gui_connection.py  test_gui_e2e.py  test_gui_gauges.py  test_gui_immobiliser.py  test_gui_live_data.py  test_gui_maps.py  test_gui_shell.py  test_gui_vehicle_toolbox.py  test_gui_version.py  test_gui_wait.py  test_immobiliser.py  test_integration.py  test_livedata.py  test_maps.py  test_programming.py  test_scenarios.py  test_tcp_transport.py  test_transport.py  (+1 more)
(+70 files in other folders)
